force-app/main/default/objects/Account/fields/AHHA_Acreditation__c.field-meta.xml
<CustomField>
    <fullName>AHHA_Acreditation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AHHA Acreditation</label>
    <type>Checkbox</type>
</CustomField>