force-app/main/default/objects/Account/fields/Animal_Types_Treated__c.field-meta.xml
<CustomField>
    <fullName>Animal_Types_Treated__c</fullName>
    <label>Animal Types Treated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Animals - Dog</fullName>
            </value>
            <value>
                <fullName>Small Animals - Cat</fullName>
            </value>
            <value>
                <fullName>Large Animals - Horse</fullName>
            </value>
            <value>
                <fullName>Large Animals - Other</fullName>
            </value>
            <value>
                <fullName>Exotic Animals</fullName>
            </value>
            <value>
                <fullName>Food Animals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>