force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesia &amp; Pain Management</fullName>
            </value>
            <value>
                <fullName>Avian &amp; Exotic Pet</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Emergency &amp; Critical Care</fullName>
            </value>
            <value>
                <fullName>Hemodialysis</fullName>
            </value>
            <value>
                <fullName>Integrative Medicine</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology &amp; Endoscopy</fullName>
            </value>
            <value>
                <fullName>Neuroendoscopy</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophtalmology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Reptile &amp; Amphibian</fullName>
            </value>
            <value>
                <fullName>Sports Medicine and Rehab</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Surgical Oncology</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Brick &amp; Mortar</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Pop-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>