force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Subtype__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesia &amp; Pain Management</fullName>
            </value>
            <value>
                <fullName>Avian &amp; Exotic Pet</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Emergency &amp; Critical Care</fullName>
            </value>
            <value>
                <fullName>Hemodialysis</fullName>
            </value>
            <value>
                <fullName>Integrative Medicine</fullName>
            </value>
            <value>
                <fullName>Interventional Radiology &amp; Endoscopy</fullName>
            </value>
            <value>
                <fullName>Neuroendoscopy</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophtalmology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Reptile &amp; Amphibian</fullName>
            </value>
            <value>
                <fullName>Sports Medicine and Rehab</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Surgical Oncology</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Brick &amp; Mortar</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Pop-Up</fullName>
            </value>
            <value>
                <fullName>Buying Group</fullName>
                <isActive>false</isActive>
                <label>Buying Group</label>
            </value>
            <value>
                <fullName>Capital Partner/Investor</fullName>
                <isActive>false</isActive>
                <label>Capital Partner/Investor</label>
            </value>
            <value>
                <fullName>College University</fullName>
                <isActive>false</isActive>
                <label>College / University</label>
            </value>
            <value>
                <fullName>Corporate Account</fullName>
                <isActive>false</isActive>
                <label>Corporate Account</label>
            </value>
            <value>
                <fullName>Corporate Account Buying Group</fullName>
                <isActive>false</isActive>
                <label>Corporate Account Buying Group</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
                <isActive>false</isActive>
                <label>Distributor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>