force-app/main/default/objects/Account/fields/Clinic_is_Live__c.field-meta.xml
<CustomField>
    <fullName>Clinic_is_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinic is Live</label>
    <type>Checkbox</type>
</CustomField>