force-app/main/default/objects/Account/fields/Clinic_Requested_PIMS_Integration__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Requested_PIMS_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinic Requested PIMS Integration</label>
    <type>Checkbox</type>
</CustomField>