force-app/main/default/objects/Account/fields/ClinicOverride__c.field-meta.xml
<CustomField>
    <fullName>ClinicOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this account has child accounts but should be treated like a clinic.</inlineHelpText>
    <label>Clinic Override</label>
    <type>Checkbox</type>
</CustomField>