force-app/main/default/objects/Account/fields/ClinicSchemaName__c.field-meta.xml
<CustomField>
    <fullName>ClinicSchemaName__c</fullName>
    <label>Clinic Schema Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>