force-app/main/default/objects/Account/fields/Consent_to_Participate_in_Research__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Participate_in_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to Participate in Research</label>
    <type>Checkbox</type>
</CustomField>