force-app/main/default/objects/Account/fields/CreateOnboardingOpportunity__c.field-meta.xml
<CustomField>
    <fullName>CreateOnboardingOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Onboarding Opportunity</label>
    <type>Checkbox</type>
</CustomField>