force-app/main/default/objects/Account/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>