force-app/main/default/objects/Account/fields/Discount_club_member__c.field-meta.xml
<CustomField>
    <fullName>Discount_club_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount club member</label>
    <type>Checkbox</type>
</CustomField>