force-app/main/default/objects/Account/fields/DoNotProspect__c.field-meta.xml
<CustomField>
    <fullName>DoNotProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Prospect</label>
    <type>Checkbox</type>
</CustomField>