force-app/main/default/objects/Account/fields/Establishment_Type__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Type__c</fullName>
    <label>Establishment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary Clinic</fullName>
            </value>
            <value>
                <fullName>Veterinary Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>