force-app/main/default/objects/Account/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary Partner</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Vet Association</fullName>
            </value>
            <value>
                <fullName>Vet School</fullName>
            </value>
            <value>
                <fullName>Buying Group</fullName>
                <isActive>false</isActive>
                <label>Buying Group</label>
            </value>
            <value>
                <fullName>Shelter</fullName>
                <isActive>false</isActive>
                <label>Shelter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>