force-app/main/default/objects/Account/fields/FullTimeVeterinaryEquivalent__c.field-meta.xml
<CustomField>
    <fullName>FullTimeVeterinaryEquivalent__c</fullName>
    <label>Full-Time Veterinary Equivalent</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>