force-app/main/default/objects/Account/fields/Genus__c.field-meta.xml
<CustomField>
    <fullName>Genus__c</fullName>
    <label>Genus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying Group</fullName>
            </value>
            <value>
                <fullName>Capital Partner/Investor</fullName>
            </value>
            <value>
                <fullName>College University</fullName>
                <label>College / University</label>
            </value>
            <value>
                <fullName>Corporate Account</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>PIMS</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Shelter Non Profit</fullName>
                <label>Shelter/Non Profit</label>
            </value>
            <value>
                <fullName>Vet Tech School</fullName>
            </value>
            <value>
                <fullName>Corporate Account Buying Group</fullName>
                <isActive>false</isActive>
                <label>Corporate Account Buying Group</label>
            </value>
            <value>
                <fullName>Independent Company</fullName>
                <isActive>false</isActive>
                <label>Independent Company</label>
            </value>
            <value>
                <fullName>University</fullName>
                <isActive>false</isActive>
                <label>University</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>