force-app/main/default/objects/Account/fields/HasParent__c.field-meta.xml
<CustomField>
    <fullName>HasParent__c</fullName>
    <formula>IF(
  NOT(
     ISBLANK(ParentId)
  )
  , TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Parent</label>
    <type>Checkbox</type>
</CustomField>