force-app/main/default/objects/Account/fields/HasPIMSProviders__c.field-meta.xml
<CustomField>
    <fullName>HasPIMSProviders__c</fullName>
    <formula>IF(
  NOT(
    ISBLANK(PIMS_Providerrs__c)
    )
  ,TRUE,FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has PIMS Providers</label>
    <type>Checkbox</type>
</CustomField>