force-app/main/default/objects/Account/fields/Health_Industrial_Number_HIN_ID__c.field-meta.xml
<CustomField>
    <fullName>Health_Industrial_Number_HIN_ID__c</fullName>
    <label>Health Industrial Number (HIN) ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>