force-app/main/default/objects/Account/fields/Heathcare_credit_card_accepted__c.field-meta.xml
<CustomField>
    <fullName>Heathcare_credit_card_accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heathcare credit card accepted</label>
    <type>Checkbox</type>
</CustomField>