force-app/main/default/objects/Account/fields/Home_Delivery_Provider__c.field-meta.xml
<CustomField>
    <fullName>Home_Delivery_Provider__c</fullName>
    <label>Home Delivery Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covetrus</fullName>
            </value>
            <value>
                <fullName>In-House Only</fullName>
            </value>
            <value>
                <fullName>Vet Source</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Provider 3</fullName>
                <isActive>false</isActive>
                <label>Provider 3</label>
            </value>
            <value>
                <fullName>Provider 4</fullName>
                <isActive>false</isActive>
                <label>Provider 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>