force-app/main/default/objects/Account/fields/Home_Delivery_Provider_Other__c.field-meta.xml
<CustomField>
    <fullName>Home_Delivery_Provider_Other__c</fullName>
    <description>Use when &quot;other&quot; is selected in the Home Delivery Provider field. This will carry over to the Practice Account upon conversion.</description>
    <inlineHelpText>Use when &quot;other&quot; is selected in the Home Delivery Provider field. This will carry over to the Practice Account upon conversion.</inlineHelpText>
    <label>Home Delivery Provider Other</label>
    <length>120</length>
    <type>Text</type>
</CustomField>