force-app/main/default/objects/Account/fields/Insurance_Company_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Affiliations__c</fullName>
    <label>Insurance Company Affiliations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider 3</fullName>
            </value>
            <value>
                <fullName>Provider 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>