force-app/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(
  RecordType.Name = &quot;Veterinary Partner&quot; &amp;&amp;
  ((NumberOfChildren__c &gt; 0 &amp;&amp; ParentId = null &amp;&amp; ClinicOverride__c = false) ||
  (NumberOfChildren__c &gt; 0 &amp;&amp; ParentId != null &amp;&amp; ClinicOverride__c = false)), &quot;Parent Company&quot;,
  IF(
    RecordType.Name = &quot;Veterinary Partner&quot;, &quot;Clinic&quot;,
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>