force-app/main/default/objects/Account/fields/Marketing_Materials__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Materials</label>
    <type>Checkbox</type>
</CustomField>