force-app/main/default/objects/Account/fields/Number_of_Chewy_Patients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Chewy_Patients__c</fullName>
    <label>Number of Chewy Patients</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>