force-app/main/default/objects/Account/fields/Number_of_Employees_Staff_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Staff_Members__c</fullName>
    <label>Number of Employees/Staff Members</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>