force-app/main/default/objects/Account/fields/of_Onboarding_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>of_Onboarding_Opportunities__c</fullName>
    <label># of Onboarding Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Onboarding_Opportunity__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>