force-app/main/default/objects/Account/fields/On_site_Practice_Pet_Names__c.field-meta.xml
<CustomField>
    <fullName>On_site_Practice_Pet_Names__c</fullName>
    <label>On-site/Practice Pet Names</label>
    <type>TextArea</type>
</CustomField>