force-app/main/default/objects/Account/fields/On_site_Practice_Pet_Species__c.field-meta.xml
<CustomField>
    <fullName>On_site_Practice_Pet_Species__c</fullName>
    <label>On-site/Practice Pet Species</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Horse</fullName>
            </value>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Guinea Pig</fullName>
            </value>
            <value>
                <fullName>Hamster</fullName>
            </value>
            <value>
                <fullName>Chinchilla &amp; Degu</fullName>
            </value>
            <value>
                <fullName>Gerbil</fullName>
            </value>
            <value>
                <fullName>Ferret</fullName>
            </value>
            <value>
                <fullName>Mouse &amp; Rats</fullName>
            </value>
            <value>
                <fullName>Hedgehog</fullName>
            </value>
            <value>
                <fullName>Sugar Glider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>