force-app/main/default/objects/Account/fields/Onboarding_Id__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Id__c</fullName>
    <description>Onboarding Id mapped from Lead</description>
    <label>Onboarding Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>