force-app/main/default/objects/Account/fields/Onboarding_ID_Auto__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_ID_Auto__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>Onboarding ID</label>
    <type>AutoNumber</type>
</CustomField>