force-app/main/default/objects/Account/fields/PIMS__c.field-meta.xml
<CustomField>
    <fullName>PIMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PIMS Integrated</label>
    <type>Checkbox</type>
</CustomField>