force-app/main/default/objects/Account/fields/PIMS_Provider_Other__c.field-meta.xml
<CustomField>
    <fullName>PIMS_Provider_Other__c</fullName>
    <description>Capture the PIMS Provider is Other is selected</description>
    <inlineHelpText>Capture the PIMS Provider is Other is selected</inlineHelpText>
    <label>PIMS Provider Other</label>
    <length>120</length>
    <type>Text</type>
</CustomField>