force-app/main/default/objects/Account/fields/PIMS_Providerrs__c.field-meta.xml
<CustomField>
    <fullName>PIMS_Providerrs__c</fullName>
    <label>PIMS Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI Galaxy and AI Genesis</fullName>
            </value>
            <value>
                <fullName>AVImark</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>Covetrus Pulse (eVet)</fullName>
            </value>
            <value>
                <fullName>DaySmart Vet</fullName>
            </value>
            <value>
                <fullName>Digitail</fullName>
            </value>
            <value>
                <fullName>DVMAX</fullName>
            </value>
            <value>
                <fullName>ezyVet</fullName>
            </value>
            <value>
                <fullName>Hippo Manager</fullName>
            </value>
            <value>
                <fullName>IDEXX Neo</fullName>
            </value>
            <value>
                <fullName>ImproMed Advantage</fullName>
            </value>
            <value>
                <fullName>ImproMed Equine</fullName>
            </value>
            <value>
                <fullName>ImproMed Infinity</fullName>
            </value>
            <value>
                <fullName>IntraVet</fullName>
            </value>
            <value>
                <fullName>No PIMS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Provet Cloud</fullName>
            </value>
            <value>
                <fullName>Shepherd</fullName>
            </value>
            <value>
                <fullName>VetBadger</fullName>
            </value>
            <value>
                <fullName>VetOfficeSuite.com</fullName>
            </value>
            <value>
                <fullName>VetPort</fullName>
            </value>
            <value>
                <fullName>Vetspire</fullName>
            </value>
            <value>
                <fullName>VIA</fullName>
            </value>
            <value>
                <fullName>Provider 3</fullName>
                <isActive>false</isActive>
                <label>Provider 3</label>
            </value>
            <value>
                <fullName>Provider 4</fullName>
                <isActive>false</isActive>
                <label>Provider 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>