force-app/main/default/objects/Account/fields/PIMSType__c.field-meta.xml
<CustomField>
    <fullName>PIMSType__c</fullName>
    <formula>IF(
  OR(
    INCLUDES(PIMS_Providerrs__c, &quot;Cornerstone&quot;),
    INCLUDES(PIMS_Providerrs__c, &quot;AVImark&quot;),
    INCLUDES(PIMS_Providerrs__c, &quot;ImproMed&quot;),
    INCLUDES(PIMS_Providerrs__c, &quot;IntraVet&quot;)
    ),
  &quot;On-Premise&quot;,&quot;Cloud&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIMS Type</label>
    <type>Text</type>
</CustomField>