force-app/main/default/objects/Account/fields/Practice_Hub_Status__c.field-meta.xml
<CustomField>
    <fullName>Practice_Hub_Status__c</fullName>
    <label>Practice Hub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champion Clinic</fullName>
            </value>
            <value>
                <fullName>Stable Clinic</fullName>
            </value>
            <value>
                <fullName>Unstable Clinic – Software = Practice Hub software related bug issues</fullName>
            </value>
            <value>
                <fullName>Unstable Clinic – Staff = High turnover or frequent questions from staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>