force-app/main/default/objects/Account/fields/Primary_Fax__c.field-meta.xml
<CustomField>
    <fullName>Primary_Fax__c</fullName>
    <label>Primary Fax</label>
    <type>Phone</type>
</CustomField>