force-app/main/default/objects/Account/fields/ProvidedBankLetter__c.field-meta.xml
<CustomField>
    <fullName>ProvidedBankLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided Bank Letter</label>
    <type>Checkbox</type>
</CustomField>