force-app/main/default/objects/Account/fields/ProvidedPaymentInfo__c.field-meta.xml
<CustomField>
    <fullName>ProvidedPaymentInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided Payment Info</label>
    <type>Checkbox</type>
</CustomField>