force-app/main/default/objects/Account/fields/ProvidedTaxExemptCert__c.field-meta.xml
<CustomField>
    <fullName>ProvidedTaxExemptCert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided Tax Exempt Cert</label>
    <type>Checkbox</type>
</CustomField>