force-app/main/default/objects/Account/fields/ProvidedW9__c.field-meta.xml
<CustomField>
    <fullName>ProvidedW9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided W9</label>
    <type>Checkbox</type>
</CustomField>