force-app/main/default/objects/Account/fields/RX_First_Fill__c.field-meta.xml
<CustomField>
    <fullName>RX_First_Fill__c</fullName>
    <label>RX First Fill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>