force-app/main/default/objects/Account/fields/RX_Line_items_shipped__c.field-meta.xml
<CustomField>
    <fullName>RX_Line_items_shipped__c</fullName>
    <label>RX Line items shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>