force-app/main/default/objects/Account/fields/RX_Number_of_RX_Approved__c.field-meta.xml
<CustomField>
    <fullName>RX_Number_of_RX_Approved__c</fullName>
    <label>RX Number of RX Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>