force-app/main/default/objects/Account/fields/RX_Refills__c.field-meta.xml
<CustomField>
    <fullName>RX_Refills__c</fullName>
    <label>RX Refills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>