force-app/main/default/objects/Account/fields/RX_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>RX_Revenue_Generated__c</fullName>
    <label>RX Revenue Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>