force-app/main/default/objects/Account/fields/ServiceAllocated__c.field-meta.xml
<CustomField>
    <fullName>ServiceAllocated__c</fullName>
    <label>Service Allocated</label>
    <summarizedField>AccountService__c.PercentOfService__c</summarizedField>
    <summaryForeignKey>AccountService__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>